# plaid

./: .env.example  .gitignore  README.md  pyproject.toml
launchd/: com.bcolby.plaid-sheet-sync.plist
plaid_sheet_sync/: __init__.py  cli.py  config.py  link_server.py  plaid_client.py  rows.py  sheets.py  state.py  sync.py
tests/: test_config.py  test_plaid_client.py  test_rows.py  test_sheets.py  test_sync.py
